# mousemonitor

./: .gitignore  CMakeLists.txt  main.cpp  main.qml  mousememory.cpp  mousememory.h
